--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,6 +23,25 @@
     --title-font: "Press Start 2P", cursive;
     --a-font :"UniSansBold", serif;
 }
+
+
+::-webkit-scrollbar {
+    width: 7px;
+    background-color: #383943;
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 100px;
+    background-color: lime;
+    box-shadow: 0 0 1em lime;
+}
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+    border: 1px solid;
+    width: 50px;
+}
+
+
 /* ================= Body & Styling page ============== */
 html 
 {
@@ -126,7 +145,7 @@ main .project
 {
     font-size: 20px;
     align-items: center;
-    padding-bottom: 15px;
+    padding-bottom: 50px;
     text-align: center;
     color: lime;
     font-family: var(--title-font);
@@ -138,12 +157,14 @@ main .project
     display: flex;
     justify-content: center;
     color : white;
+    font-family:var(--a-font);
+    font-size: 18px;
 }
 
 main .download
 {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-direction: column;
     align-items: center;
 }
@@ -152,7 +173,7 @@ main .download
 {
     font-size: 20px;
     align-items: center;
-    padding-bottom: 15px;
+    padding-bottom: 50px;
     text-align: center;
     color: lime;
     font-family: var(--title-font);
@@ -165,17 +186,19 @@ main .download
     justify-content: center;
     padding: 0px 0px 25px;
     color : white;
+    font-family: var(--a-font);
+    font-size : 18px;
 }
 
 .download .downloadbtn
-{
+{   
     display: flex;
     justify-content: center;
     cursor: pointer;
-    background-color: #202020;
-    border-radius: 15px;
-    font-size: 20px;
-    padding: 20px;
+    border-radius: 10px;
+    border: lime solid 1px;
+    padding: 14px 10px;
+    transition: 0.20s;
 }
 
 .download .downloadbtn:hover
@@ -183,8 +206,8 @@ main .download
     display: flex;
     justify-content: center;
     cursor: pointer;
-    background-color: #151515;
-    border-radius: 15px;
-    font-size: 20px;
-    padding: 20px;
+    border-radius: 24px;
+    border: aqua solid 1px;
+    padding: 14px 10px;
+    transition: 0.20s;
 }
