--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,129 +1,3 @@
-@font-face {
-    font-family: UniSans;
-    src: url(https://cdn.glitch.com/0cc800e9-bbdd-4fa1-b8e0-f6c112dfb2a1%2Funi-sans.heavy-italic-caps.otf?v=1615381769796);
-  }
-/* ================= Root Values ============== */
-:root
-{
-    /* ========== Colors ========== */
-
-    --background-color:hsl(136,0%,12%);
-    --title-color: hsl();
-
-
-
-    /* ========== Custom Fonts ========= */
-
-    --a-font :"UniSans";
-}
-
-
-::-webkit-scrollbar {
-    width: 7px;
-    background-color: #383943;
-}
-::-webkit-scrollbar-thumb {
-    border-radius: 100px;
-    background-color: lime;
-    box-shadow: 0 0 1em lime;
-}
-::-webkit-scrollbar-track {
-    border-radius: 10px;
-    border: 1px solid;
-    width: 50px;
-}
-
-
-/* ================= Body & Styling page ============== */
-html 
-{
-    scroll-behavior: smooth;
-}
-a
-{
-    text-decoration: none;
-    color: White;
-    font-family: var(--a-font);
-    font-size: 3vh;
-}
-
-body
-{
-    /* background-color: #161616; */
-    background-image: url(../img/final.jpg);
-    background-attachment: fixed;
-    background-size: cover;
-    transition: background 0.4s;
-}
-
-h1
-{
-    font-family: var(--a-font);
-    color:white;
-}
-p
-{
-    font-family: var(--a-font);
-    color: White;
-}
-.lime {
-    color: lime;
-  }
-
-header .navbar
-{
-    display: flex;
-    align-items: center;
-    margin: auto;
-    width: 80%;
-    justify-content: space-between;
-    /* background-color: red; */
-    gap: 50px;
-    padding-bottom: 100px;
-}
-
-.navbar .icon
-{
-    display: flex;
-    align-items: center;
-}
-.navbar .containerleft
-{
-    display: flex;
-    color : White;
-    font-size: 15px;
-    font-family: var(--a-font);
-}
-
-.navbar .containerright
-{
-    display: flex;
-    color : White;
-    gap: 15px;
-}
-
-
-.navbar .containerright a
-{
-    /* background-color: blueviolet; */
-    padding: 25px;
-}
-
-.navbar .containerright a:hover
-{
-    background-color: #10101040;
-    transition: 0.25s;
-    padding:25px;
-}
-
-.navbar .containertheme
-{
-    display: flex;
-    cursor: pointer;
-    padding: 25px;
-    color: White;
-}
-
 main 
 {
     display: flex;
@@ -173,8 +47,8 @@ main .presentation
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    gap: 25px;
 }
-
 .presentation .presentationText
 {
     align-items: center;
@@ -185,6 +59,7 @@ main .presentation
 {
     font-size: 40px;
     text-align: center;
+    padding-bottom: 15px;
 }
 
 .presentation .presentationText p
@@ -234,12 +109,16 @@ main .download
     flex-direction: column;
     align-items: center;
 }
-
+.download .hometext 
+{
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
 .download .hometext h1
 {
     font-size: 40px;
     align-items: center;
-    padding-bottom: 50px;
     text-align: center;
     color: white;
     font-family: var(--a-font);
@@ -279,4 +158,63 @@ main .download
     border: aqua solid 1px;
     padding: 14px 10px;
     transition: 0.20s;
+}
+
+*
+{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+.contactContainer
+{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 14.4px;
+    background-color: #20202090;
+    border-radius: 10px;
+    padding: 10px 10px 10px 10px;
+}
+
+.contactContainer h1
+{
+    text-align: center;
+    margin:0px 15px 10px 15px;
+}
+
+.contactContainer input[type="text"], [type ="submit"]
+{
+    border: 1px solid lime;
+    background: none;
+    border-radius: 10px;
+    color: White;
+    padding: 10px;
+    transition: 0.25s;
+    text-align: center;
+}
+.contactContainer textarea
+{
+    border: 1px solid lime;
+    background: none;
+    border-radius: 10px;
+    color: White;
+    padding: 10px;
+    transition: 0.25s;
+}
+
+.contactContainer input:hover 
+{
+    border: 1px solid aqua;
+    background: none;
+    border-radius: 15px;
+    color: White;
+    padding: 10px 5px;
+}
+.contactContainer textarea:hover    
+{
+    border: 1px solid aqua;
+    border-radius: 15px;
+    color: White;   
 }
