--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -135,45 +135,6 @@ header .navbar
     padding: 25px;
     color: White;
 }
-
-.footer
-{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 10px;
-    background-color: #20202070;
-    border: 0.5px solid #4a4a4a;
-    height: 30px;
-}
-
-.footer p
-{
-    padding-left: 5px;
-    font-size: 15px;
-    font-family: 'Roboto', sans-serif;
-    gap: 10px;
-    color: #636363;
-}
-
-.footer a
-{
-    color: #636363;
-}
-.footer .rightFooter
-{
-    display:flex;
-    gap: 20px;
-    padding-right: 5px;
-}
-
-*
-{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
 @media screen and (max-width: 578px) {
     .container {
       width: 350px;
@@ -188,3 +149,88 @@ header .navbar
       width: 50%;
     }
   }
+
+  main .contactContainer
+{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 20%;
+    margin: auto;
+    gap: 14.4px;
+    background-color: #20202090;
+    border-radius: 10px;
+    padding: 10px 10px 10px 10px;
+}
+
+.contactContainer h1
+{
+    text-align: center;
+    margin:0px 15px 10px 15px;
+}
+
+.contactContainer input[type="text"], [type ="submit"]
+{
+    border: 1px solid lime;
+    background: none;
+    border-radius: 10px;
+    color: White;
+    padding: 10px;
+    transition: 0.25s;
+    text-align: center;
+}
+.contactContainer textarea
+{
+    border: 1px solid lime;
+    background: none;
+    border-radius: 10px;
+    color: White;
+    padding: 10px;
+    transition: 0.25s;
+}
+
+.contactContainer input:hover 
+{
+    border: 1px solid aqua;
+    background: none;
+    border-radius: 15px;
+    color: White;
+    padding: 10px 5px;
+}
+.contactContainer textarea:hover    
+{
+    border: 1px solid aqua;
+    border-radius: 15px;
+    color: White;   
+}
+
+.footer
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    margin-top: 10px;
+    width: 100%;
+    background-color: #20202070;
+    border: 0.5px solid #4a4a4a;
+}
+
+.footer p
+{
+    padding-left: 5px;
+    font-size: 15px;
+    font-family: 'Roboto', sans-serif;
+    gap: 20px;
+    color: #636363;
+}
+
+.footer a
+{
+    color: #636363;
+}
+.footer .rightFooter
+{
+    gap: 20px;
+    padding-right: 5px;
+}
